@@ -6,6 +6,7 @@ package com.asss.www.ApotekarskaUstanova.GUI.Suppliers.NewShipment;
 
 import java.awt.*;
 import java.awt.event.*;
+import java.beans.*;
 import javax.swing.*;
 import javax.swing.GroupLayout;
 import javax.swing.event.DocumentEvent;
@@ -14,11 +15,9 @@ import javax.swing.table.DefaultTableModel;
 import javax.swing.table.JTableHeader;
 import javax.swing.table.TableModel;
 
+import com.asss.www.ApotekarskaUstanova.Dto.*;
+import com.asss.www.ApotekarskaUstanova.GUI.Start.MainMenuInventory.MainMenuInventory;
 import com.asss.www.ApotekarskaUstanova.Repository.ProductBatchRepository;
-import com.asss.www.ApotekarskaUstanova.Dto.ProductBatchDto;
-import com.asss.www.ApotekarskaUstanova.Dto.ProductDto;
-import com.asss.www.ApotekarskaUstanova.Dto.ShipmentDto;
-import com.asss.www.ApotekarskaUstanova.Dto.SupplierDto;
 import com.asss.www.ApotekarskaUstanova.Entity.Location;
 import com.asss.www.ApotekarskaUstanova.GUI.Start.MainMenuAdmin.MainMenuAdmin;
 import com.asss.www.ApotekarskaUstanova.Security.JwtResponse;
@@ -28,15 +27,22 @@ import com.fasterxml.jackson.databind.ObjectMapper;
 import com.fasterxml.jackson.datatype.jsr310.JavaTimeModule;
 import com.github.lgooddatepicker.components.*;
 import net.miginfocom.swing.*;
+import org.apache.pdfbox.pdmodel.PDDocument;
+import org.apache.pdfbox.pdmodel.PDPage;
+import org.apache.pdfbox.pdmodel.PDPageContentStream;
+import org.apache.pdfbox.pdmodel.common.PDRectangle;
+import org.apache.pdfbox.pdmodel.font.PDType0Font;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.core.io.ClassPathResource;
 
-import java.io.BufferedReader;
-import java.io.InputStreamReader;
-import java.io.OutputStream;
+import java.awt.event.ComponentEvent;
+import java.io.*;
 import java.net.HttpURLConnection;
 import java.net.URL;
 import java.net.URLEncoder;
 import java.nio.charset.StandardCharsets;
+import java.nio.file.Files;
+import java.nio.file.Paths;
 import java.time.DayOfWeek;
 import java.time.LocalDate;
 import java.time.LocalTime;
@@ -54,8 +60,10 @@ public class NewShipment extends JFrame {
         this.objectMapper = new ObjectMapper();
         this.objectMapper.registerModule(new JavaTimeModule()); // Register JavaTimeModule
         initComponents();
-        loadSupplierCB();
+
+        loadSupplierCB(3);
         loadLocationCB();
+        loadLocationCB2();
         setupListeners();
 
         calendarDesign(datePicker);
@@ -70,6 +78,16 @@ public class NewShipment extends JFrame {
         };
         items.setModel(model);
         customizeTable(items, model);
+
+        String[] columnNames2 = {"ID", "Naziv", "Količina"};
+        DefaultTableModel model2 = new DefaultTableModel(columnNames2, 0) {
+            @Override
+            public boolean isCellEditable(int row, int column) {
+                return false;  // Onemogući uređivanje ćelija
+            }
+        };
+        orderItems.setModel(model2);
+        customizeTable(orderItems, model2);
     }
 
     public static void start() {
@@ -104,6 +122,11 @@ public class NewShipment extends JFrame {
         JViewport viewport = scrollPane1.getViewport();
         viewport.setBackground(backgroundColor);
         scrollPane1.setBackground(backgroundColor);
+
+        JViewport viewport2 = scrollPane2.getViewport();
+        viewport2.setBackground(backgroundColor);
+        scrollPane2.setBackground(backgroundColor);
+
     }
 
     private static void calendarDesign(DatePicker datePicker) {
@@ -129,7 +152,7 @@ public class NewShipment extends JFrame {
         datePicker.setSettings(settings);
     }
 
-    private void loadSupplierCB() {
+    private void loadSupplierCB(int preselectedId) {
         String urlString = "http://localhost:8080/api/suppliers";
         try {
             URL url = new URL(urlString);
@@ -142,18 +165,17 @@ public class NewShipment extends JFrame {
                 try (Scanner scanner = new Scanner(connection.getInputStream())) {
                     String response = scanner.useDelimiter("\\A").next();
 
-                    // Parsiranje JSON odgovora u listu SupplierDto objekata
                     ObjectMapper objectMapper = new ObjectMapper();
-                    List<SupplierDto> suppliers = objectMapper.readValue(response, new TypeReference<List<SupplierDto>>() {
-                    });
+                    List<SupplierDto> suppliers = objectMapper.readValue(response, new TypeReference<List<SupplierDto>>() {});
 
-                    // Čišćenje postojećih stavki u JComboBox-u
                     supplier.removeAllItems();
 
-                    // Dodavanje imena dobavljača u JComboBox
                     for (SupplierDto s : suppliers) {
-                        supplier.addItem(s.getName() + " - " + s.getPhone()); // Pretpostavimo da klasa SupplierDto ima metodu getName()
+                        supplier.addItem(s.getId() + " - " + s.getName() + " - " + s.getPhone());
                     }
+
+                    // Ovde sigurno postoji combo box i stavke — sada postavi selekciju
+                    setSupplierComboBoxById(preselectedId);
                 }
             } else if (responseCode == HttpURLConnection.HTTP_UNAUTHORIZED) {
                 JOptionPane.showMessageDialog(this, "Nevažeći token. Prijavite se ponovo.", "Greška", JOptionPane.WARNING_MESSAGE);
@@ -165,6 +187,7 @@ public class NewShipment extends JFrame {
             JOptionPane.showMessageDialog(this, "Greška prilikom učitavanja podataka!", "Greška", JOptionPane.ERROR_MESSAGE);
         }
     }
+
 
     private void loadLocationCB() {
         String urlString = "http://localhost:8080/api/locations";
@@ -204,6 +227,44 @@ public class NewShipment extends JFrame {
         }
     }
 
+    private void loadLocationCB2() {
+        String urlString = "http://localhost:8080/api/locations";
+        try {
+            URL url = new URL(urlString);
+            HttpURLConnection connection = (HttpURLConnection) url.openConnection();
+            connection.setRequestMethod("GET");
+            connection.setRequestProperty("Authorization", "Bearer " + JwtResponse.getToken());
+
+            int responseCode = connection.getResponseCode();
+            if (responseCode == HttpURLConnection.HTTP_OK) {
+                try (Scanner scanner = new Scanner(connection.getInputStream())) {
+                    String response = scanner.useDelimiter("\\A").next();
+
+                    // Parsiranje JSON odgovora u listu lokacija
+                    ObjectMapper objectMapper = new ObjectMapper();
+                    List<Location> locations = objectMapper.readValue(response, new TypeReference<List<Location>>() {
+                    });
+
+                    // Čišćenje postojećih stavki u JComboBox-u
+                    locationCB2.removeAllItems();
+
+                    // Dodavanje kombinacije polja u JComboBox
+                    for (Location l : locations) {
+                        String comboBoxItem = String.format("%s - %s - %s - %s", l.getSection(), l.getShelf(), l.getRow(), l.getDescription());
+                        locationCB2.addItem(comboBoxItem);
+                    }
+                }
+            } else if (responseCode == HttpURLConnection.HTTP_UNAUTHORIZED) {
+                JOptionPane.showMessageDialog(this, "Nevažeći token. Prijavite se ponovo.", "Greška", JOptionPane.WARNING_MESSAGE);
+            } else {
+                JOptionPane.showMessageDialog(this, "Greška pri dohvatu podataka: " + responseCode, "Greška", JOptionPane.ERROR_MESSAGE);
+            }
+        } catch (Exception e) {
+            e.printStackTrace();
+            JOptionPane.showMessageDialog(this, "Greška prilikom učitavanja podataka!", "Greška", JOptionPane.ERROR_MESSAGE);
+        }
+    }
+
     private void addMouseClicked(MouseEvent e) {
         // Dohvatanje podataka iz polja
         String selectedProduct = product.getText().trim();
@@ -217,7 +278,6 @@ public class NewShipment extends JFrame {
             return;
         }
 
-        // Provera da li je količina validan broj
         int quantityValue;
         try {
             quantityValue = Integer.parseInt(selectedQuantity);
@@ -230,17 +290,27 @@ public class NewShipment extends JFrame {
             return;
         }
 
-        // Provera da li je datum nakon trenutnog datuma
         if (selectedDate.isBefore(LocalDate.now())) {
             JOptionPane.showMessageDialog(this, "Datum mora biti nakon trenutnog datuma!", "Greška", JOptionPane.ERROR_MESSAGE);
             return;
         }
 
-        // Formatiranje datuma
         String formattedDate = selectedDate.toString();
 
-        // Provera da li postoji isti proizvod sa istim rokom trajanja na drugoj lokaciji
+        // Poziv metode za unos u tabelu
+        addOrUpdateItemInTable(selectedProduct, quantityValue, formattedDate, selectedLocation);
+
+        // Čišćenje polja nakon dodavanja
+        product.setText("");
+        quantity.setText("");
+        datePicker.setDate(LocalDate.now());
+        location.setSelectedIndex(0);
+    }
+
+    private void addOrUpdateItemInTable(String selectedProduct, int quantityValue, String formattedDate, String selectedLocation) {
         DefaultTableModel model = (DefaultTableModel) items.getModel();
+
+        // Provera da li postoji isti proizvod sa istim rokom trajanja na drugoj lokaciji
         boolean sameProductDifferentLocation = false;
 
         for (int i = 0; i < model.getRowCount(); i++) {
@@ -256,7 +326,6 @@ public class NewShipment extends JFrame {
             }
         }
 
-        // Ako postoji isti proizvod na drugoj lokaciji, prikaži dijalog
         if (sameProductDifferentLocation) {
             int option = JOptionPane.showConfirmDialog(
                     this,
@@ -267,7 +336,7 @@ public class NewShipment extends JFrame {
             );
 
             if (option == JOptionPane.NO_OPTION) {
-                return; // Vrati se na formu bez dodavanja
+                return;
             }
         }
 
@@ -287,22 +356,14 @@ public class NewShipment extends JFrame {
             }
         }
 
-        // Ako postoji isti proizvod, rok trajanja i lokacija, ažuriraj količinu
         if (sameProductSameLocation) {
             int existingQuantity = Integer.parseInt((String) model.getValueAt(rowIndex, 1));
             int newQuantity = existingQuantity + quantityValue;
             model.setValueAt(String.valueOf(newQuantity), rowIndex, 1);
         } else {
-            // Dodavanje novog reda u tabelu
-            model.addRow(new Object[]{selectedProduct, selectedQuantity, formattedDate, selectedLocation});
+            model.addRow(new Object[]{selectedProduct, String.valueOf(quantityValue), formattedDate, selectedLocation});
             customizeTable(items, model);
         }
-
-        // Čišćenje polja nakon dodavanja
-        product.setText("");
-        quantity.setText("");
-        datePicker.setDate(LocalDate.now());
-        location.setSelectedIndex(0);
     }
 
     private void setupListeners() {
@@ -508,7 +569,9 @@ public class NewShipment extends JFrame {
 
     private int getProductIdByName(String productName) {
         try {
-            URL url = new URL("http://localhost:8080/api/products/name/" + URLEncoder.encode(productName, "UTF-8"));
+            String encodedName = URLEncoder.encode(productName, StandardCharsets.UTF_8);
+            encodedName = encodedName.replace("+", "%20");
+            URL url = new URL("http://localhost:8080/api/products/name/" + encodedName);
             HttpURLConnection connection = (HttpURLConnection) url.openConnection();
             connection.setRequestMethod("GET");
             connection.setRequestProperty("Authorization", "Bearer " + JwtResponse.getToken());
@@ -677,7 +740,8 @@ public class NewShipment extends JFrame {
         return -1; // Return -1 if an error occurs
     }
 
-    public int addShipment(int supplierId, LocalDate arrivalDate, String arrivalTime) {
+    private int addShipment(int supplierId, LocalDate arrivalDate, String arrivalTime) {
+        int employeeId = JwtResponse.getUserId();
         try {
             URL url = new URL("http://localhost:8080/api/shipment/add");
             HttpURLConnection connection = (HttpURLConnection) url.openConnection();
@@ -709,6 +773,19 @@ public class NewShipment extends JFrame {
                     // Parse JSON response into ShipmentDto
                     ShipmentDto shipmentDto = objectMapper.readValue(response, ShipmentDto.class);
 
+                    // Generate receipt
+                    String supplierName = getSupplierNameById(supplierId);
+                    LocalTime time = LocalTime.parse(arrivalTime);
+                    String employeeName = fetchEmployeeName(employeeId);
+                    generateReceipt(
+                            shipmentDto.getId(),
+                            arrivalDate,
+                            time,
+                            supplierName,
+                            employeeName,
+                            itemsList
+                    );
+
                     // Return the ID of the created Shipment
                     return shipmentDto.getId();
                 }
@@ -719,6 +796,29 @@ public class NewShipment extends JFrame {
             e.printStackTrace();
         }
         return -1; // Return -1 if an error occurs
+    }
+
+    private String fetchEmployeeName(int employeeId) {
+        try {
+            URL url = new URL("http://localhost:8080/api/employees/" + employeeId);
+            HttpURLConnection connection = (HttpURLConnection) url.openConnection();
+            connection.setRequestMethod("GET");
+            connection.setRequestProperty("Authorization", "Bearer " + JwtResponse.getToken());
+
+            if (connection.getResponseCode() == HttpURLConnection.HTTP_OK) {
+                try (Scanner scanner = new Scanner(connection.getInputStream())) {
+                    String response = scanner.useDelimiter("\\A").next();
+                    EmployeeDto employee = objectMapper.readValue(response, EmployeeDto.class);
+
+                    return employee.getName() + " " + employee.getSurname();
+                }
+            } else {
+                return "Nepoznati zaposleni";
+            }
+        } catch (Exception e) {
+            e.printStackTrace();
+            return "Greška pri učitavanju zaposlenog";
+        }
     }
 
     public void addShipmentItem(int shipmentId, int productId, int quantity) {
@@ -761,9 +861,396 @@ public class NewShipment extends JFrame {
         }
     }
 
+    public static void generateReceipt(int shipmentId, LocalDate arrivalDate, LocalTime arrivalTime,
+                                       String supplierName, String employeeName, List<Map<String, Object>> items) {
+        try (PDDocument document = new PDDocument()) {
+            // 1. Izračunavanje dimenzija koristeći metode
+            int maxLineLength = calculateMaxLineLength(shipmentId, arrivalDate, arrivalTime, supplierName, items);
+            int totalLines = calculateTotalLines(items);
+
+            // 2. Dinamičko određivanje širina kolona
+            int maxNameLength = items.stream()
+                    .mapToInt(item -> ((String)item.get("Naziv proizvoda")).length())
+                    .max()
+                    .orElse(15);
+            maxNameLength = Math.min(Math.max(maxNameLength, 10), 25);
+
+            int col1Width = maxNameLength + 4;
+            int col2Width = 8;
+            int col3Width = 12;
+            int tableWidth = col1Width + col2Width + col3Width + 4;
+
+            // 3. Postavke stranice
+            int lineHeight = 15;
+            int margin = 15;
+            int pageWidth = Math.min(Math.max(maxLineLength + 2 * margin, 300), 595);
+            int pageHeight = Math.min(totalLines * lineHeight + 2 * margin, 842);
+
+            PDPage page = new PDPage(new PDRectangle(pageWidth, pageHeight));
+            document.addPage(page);
+
+            try (PDPageContentStream contentStream = new PDPageContentStream(document, page)) {
+                PDType0Font font = PDType0Font.load(document,
+                        new ClassPathResource("static/arial.ttf").getInputStream());
+
+                contentStream.setFont(font, 10);
+                contentStream.beginText();
+                contentStream.newLineAtOffset(margin, pageHeight - margin - 10);
+
+                // 4. Zaglavlje
+                String[] headerLines = {
+                        "===== PRIJEMNICA =====",
+                        "ID: " + shipmentId,
+                        "Datum: " + arrivalDate,
+                        "Vreme: " + arrivalTime.format(DateTimeFormatter.ofPattern("HH:mm:ss")),
+                        "Blagajnik: " + employeeName,
+                        "Dobavljač: " + supplierName
+                };
+
+                for (String line : headerLines) {
+                    contentStream.showText(line);
+                    contentStream.newLineAtOffset(0, -lineHeight);
+                }
+
+                // Linija ispod zaglavlja (dužina naslova)
+                String headerSeparator = new String(new char[headerLines[0].length()]).replace('\0', '=');
+                contentStream.showText(headerSeparator);
+                contentStream.newLineAtOffset(0, -lineHeight);
+
+                // 5. Tabela proizvoda
+                String headerFormat = "%-" + col1Width + "s %" + col2Width + "s %" + col3Width + "s";
+                contentStream.showText(String.format(headerFormat, "Proizvod", "Količina", "Rok trajanja"));
+                contentStream.newLineAtOffset(0, -lineHeight);
+
+                // Linija ispod naslova tabele (tačna širina tabele)
+                String tableSeparator = new String(new char[tableWidth]).replace('\0', '-');
+                contentStream.showText(tableSeparator);
+                contentStream.newLineAtOffset(0, -lineHeight);
+
+                // Stavke
+                String itemFormat = "%-" + col1Width + "s %" + col2Width + "s %" + col3Width + "s";
+                for (Map<String, Object> item : items) {
+                    String productName = shorten(((String) item.get("Naziv proizvoda")), maxNameLength);
+                    contentStream.showText(String.format(itemFormat,
+                            productName,
+                            item.get("Kolicina").toString(),
+                            ((String) item.get("Rok trajanja")).substring(2)));
+                    contentStream.newLineAtOffset(0, -lineHeight);
+                }
+                contentStream.endText();
+            }
+
+            // 7. Čuvanje dokumenta
+            String folderPath = "receipts/shipments/" + arrivalDate;
+            Files.createDirectories(Paths.get(folderPath));
+            document.save(new File(folderPath + "/Shipment_" + shipmentId + ".pdf"));
+
+        } catch (IOException e) {
+            e.printStackTrace();
+        }
+    }
+
+    private static int calculateMaxLineLength(int shipmentId, LocalDate arrivalDate,
+                                              LocalTime arrivalTime, String supplierName,
+                                              List<Map<String, Object>> items) {
+        int maxLength = 0;
+        String[] headerLines = {
+                "===== PRIJEMNICA =====",
+                "ID: " + shipmentId,
+                "Datum: " + arrivalDate,
+                "Vreme: " + arrivalTime.format(DateTimeFormatter.ofPattern("HH:mm:ss")),
+                "Blagajnik: ...",
+                "Dobavljač: " + supplierName
+        };
+
+        for (String line : headerLines) {
+            maxLength = Math.max(maxLength, line.length() * 6);
+        }
+
+        // Izračunaj širinu za tabelu
+        int maxNameLength = items.stream()
+                .mapToInt(item -> ((String)item.get("Naziv proizvoda")).length())
+                .max()
+                .orElse(15);
+        maxNameLength = Math.min(Math.max(maxNameLength, 10), 25);
+
+        int col1Width = maxNameLength + 4;
+        int col2Width = 8;
+        int col3Width = 12;
+        int tableWidth = col1Width + col2Width + col3Width + 4;
+
+        maxLength = Math.max(maxLength, tableWidth * 6);
+
+        String footer = "Ukupno: " + items.size() + " proizvoda";
+        return Math.max(maxLength, footer.length() * 6);
+    }
+
+    private static int calculateTotalLines(List<Map<String, Object>> items) {
+        // Zaglavlje: 7 linija (naslov + 5 podataka + linija razdvajanja)
+        // Tabela: 2 linije (header + separator)
+        // Stavke: items.size()
+        return 7 + 2 + items.size();
+    }
+
+    private static String shorten(String text, int maxLength) {
+        return text.length() > maxLength ? text.substring(0, maxLength - 3) + "..." : text;
+    }
+
+    private String getSupplierNameById(int supplierId) {
+        try {
+            URL url = new URL("http://localhost:8080/api/suppliers/" + supplierId);
+            HttpURLConnection connection = (HttpURLConnection) url.openConnection();
+            connection.setRequestMethod("GET");
+            connection.setRequestProperty("Authorization", "Bearer " + JwtResponse.getToken());
+
+            if (connection.getResponseCode() == HttpURLConnection.HTTP_OK) {
+                try (Scanner scanner = new Scanner(connection.getInputStream())) {
+                    String response = scanner.useDelimiter("\\A").next();
+                    ObjectMapper mapper = new ObjectMapper();
+                    SupplierDto supplier = mapper.readValue(response, SupplierDto.class);
+                    return supplier.getName();
+                }
+            }
+        } catch (Exception e) {
+            e.printStackTrace();
+        }
+        return "Nepoznat dobavljač";
+    }
+
     private void backMouseClicked(MouseEvent e) {
         dispose();
-        MainMenuAdmin.start();
+        MainMenuInventory.start();
+    }
+
+    private void add2MouseClicked(MouseEvent e) {
+        DefaultTableModel model = (DefaultTableModel) orderItems.getModel();
+        int rowCount = model.getRowCount();
+
+        itemsToProcess.clear();
+        currentItemIndex = 0;
+
+        for (int i = 0; i < rowCount; i++) {
+            String name = model.getValueAt(i, 1).toString();          // naziv proizvoda je kolona 1 (jer 0 je ID)
+            int quantity = Integer.parseInt(model.getValueAt(i, 2).toString()); // kolona 2 = količina
+
+            // Pretpostavljam da OrderItemsDto ima konstruktor sa nazivom i količinom
+            itemsToProcess.add(new OrderItemsDto(name, quantity));
+        }
+
+//        if (!itemsToProcess.isEmpty()) {
+//            showItemInputDialog(itemsToProcess.get(currentItemIndex));
+//        } else {
+//            JOptionPane.showMessageDialog(this, "Nema stavki za unos.", "Informacija", JOptionPane.INFORMATION_MESSAGE);
+//        }
+        if (!itemsToProcess.isEmpty()) {
+            showItemInputDialog();
+        }
+    }
+
+    private void showItemInputDialog() {
+        if (currentItemIndex >= itemsToProcess.size()) {
+            orderedSuppliesDialog2.setVisible(false);  // zatvori modal kad je kraj
+            return;
+        }
+
+        OrderItemsDto currentItem = itemsToProcess.get(currentItemIndex);
+
+        // Postavi podatke u modal: npr. naziv proizvoda u labelu, resetuj polja za rok i lokaciju
+        productName.setText(currentItem.getProduct().getName());
+        datePicker1.setText("");
+        locationCB2.setSelectedIndex(0);
+
+        orderedSuppliesDialog2.setVisible(true);
+    }
+
+    private void orderedSuppliesMouseClicked(MouseEvent e) {
+        orderedSuppliesDialog.setVisible(true);
+    }
+
+    private void orderedSuppliesDialogComponentShown(ComponentEvent e) {
+        List<OrderDto> nonReceivedOrders = getNonReceivedOrders();
+
+        orderCB.removeAllItems();
+        for (OrderDto orderItem : nonReceivedOrders) {
+            String itemText = orderItem.getId() + " - " +
+                    orderItem.getSupplier().getName() + " - " +
+                    orderItem.getSelectedDate() + " - " +
+                    orderItem.getSelectedTime();
+            orderCB.addItem(itemText);
+        }
+
+        if (orderCB.getItemCount() > 0) {
+            orderCB.setSelectedIndex(0);
+
+            // Ručno pokreni akciju da bi se popunila tabela
+            orderCB(new ActionEvent(orderCB, ActionEvent.ACTION_PERFORMED, ""));
+        } else {
+            System.out.println("Nema narudžbina za prikaz");
+        }
+    }
+
+
+    private List<OrderDto> getNonReceivedOrders() {
+        List<OrderDto> nonReceivedOrders = new ArrayList<>();
+
+        try {
+            URL url = new URL("http://localhost:8080/api/orders/not-received");
+            HttpURLConnection conn = (HttpURLConnection) url.openConnection();
+            conn.setRequestMethod("GET");
+            conn.setRequestProperty("Authorization", "Bearer " + JwtResponse.getToken());
+
+            if (conn.getResponseCode() == HttpURLConnection.HTTP_OK) {
+                try (BufferedReader reader = new BufferedReader(new InputStreamReader(conn.getInputStream()))) {
+                    String response = reader.lines().collect(Collectors.joining());
+                    nonReceivedOrders = objectMapper.readValue(response, new TypeReference<List<OrderDto>>() {});
+                }
+            }
+        } catch (Exception ex) {
+            ex.printStackTrace();
+        }
+
+        return nonReceivedOrders;
+    }
+
+    private void fillOrderItemsTable(int orderId) {
+        DefaultTableModel model = (DefaultTableModel) orderItems.getModel();
+        model.setRowCount(0);
+        try {
+            URL url = new URL("http://localhost:8080/api/order-items/order/" + orderId);
+            HttpURLConnection connection = (HttpURLConnection) url.openConnection();
+            connection.setRequestMethod("GET");
+            connection.setRequestProperty("Authorization", "Bearer " + JwtResponse.getToken());
+
+            int responseCode = connection.getResponseCode();
+            if (responseCode == HttpURLConnection.HTTP_OK) {
+                try (Scanner scanner = new Scanner(connection.getInputStream())) {
+                    String response = scanner.useDelimiter("\\A").next();
+
+                    List<OrderItemsDto> orderItems = objectMapper.readValue(response, new TypeReference<List<OrderItemsDto>>() {});
+
+                    for (OrderItemsDto item : orderItems) {
+                        model.addRow(new Object[]{
+                                item.getId(),
+                                item.getProduct().getName(),
+                                item.getQuantity()
+                        });
+                    }
+                }
+            } else {
+                JOptionPane.showMessageDialog(this, "Greška prilikom učitavanja stavki narudžbine.", "HTTP greška", JOptionPane.ERROR_MESSAGE);
+            }
+
+            connection.disconnect();
+        } catch (Exception e) {
+            e.printStackTrace();
+            JOptionPane.showMessageDialog(this, "Greška pri komunikaciji sa serverom.", "Greška", JOptionPane.ERROR_MESSAGE);
+        }
+
+        customizeTable(orderItems, model);
+    }
+
+    private void add3MouseClicked(MouseEvent e) {
+        String selectedProduct = productName.getText();
+        int quantityValue = itemsToProcess.get(currentItemIndex).getQuantity();
+        String formattedDate = datePicker1.getText();
+        String selectedLocation = (String) locationCB2.getSelectedItem();
+
+        addOrUpdateItemInTable(selectedProduct, quantityValue, formattedDate, selectedLocation);
+
+        currentItemIndex++;
+        if (currentItemIndex < itemsToProcess.size()) {
+            showItemInputDialog();  // idi na sledeću stavku
+        } else {
+            orderedSuppliesDialog2.setVisible(false);
+            orderedSuppliesDialog.setVisible(false);
+
+            // Dodaj u listu unetih narudžbina
+            processedOrderIds.add(selectedOrderId);
+
+            // Ažuriraj status na acquired = 1
+            markOrderAsAcquired(selectedOrderId);
+
+            loadSupplierCB(selectedSupplierId);
+
+        }
+    }
+
+    private void markOrderAsAcquired(int orderId) {
+        try {
+            URL url = new URL("http://localhost:8080/api/orders/mark-acquired/" + orderId);
+            HttpURLConnection conn = (HttpURLConnection) url.openConnection();
+            conn.setRequestMethod("PUT");
+            conn.setRequestProperty("Authorization", "Bearer " + JwtResponse.getToken());
+            conn.setDoOutput(true); // jer je PUT
+
+            int responseCode = conn.getResponseCode();
+            if (responseCode == HttpURLConnection.HTTP_OK) {
+                System.out.println("Narudžbina označena kao primljena.");
+            } else {
+                System.err.println("Greška pri označavanju narudžbine: " + responseCode);
+            }
+
+            conn.disconnect();
+        } catch (Exception e) {
+            e.printStackTrace();
+        }
+    }
+
+
+    private void orderCBPropertyChange(PropertyChangeEvent e) {
+
+    }
+
+    private void orderCBItemStateChanged(ItemEvent e) {
+        // TODO add your code here
+    }
+
+    private void orderCB(ActionEvent e) {
+        String selectedItem = (String) orderCB.getSelectedItem();
+
+        if (selectedItem == null || selectedItem.isEmpty()) {
+            System.out.println("Nijedna stavka nije selektovana u combo boxu.");
+            return;
+        }
+
+        try {
+            int orderId = Integer.parseInt(selectedItem.split(" - ")[0]);
+
+            OrderDto selectedOrder = getNonReceivedOrders()
+                    .stream()
+                    .filter(o -> o.getId() == orderId)
+                    .findFirst()
+                    .orElse(null);
+
+            if (selectedOrder != null) {
+                selectedSupplierId = selectedOrder.getSupplier().getId();
+                loadSupplierCB(selectedSupplierId);
+            }
+
+            setSelectedOrderId(orderId);
+            fillOrderItemsTable(orderId);
+        } catch (Exception ex) {
+            ex.printStackTrace();
+            JOptionPane.showMessageDialog(this, "Greška pri obradi selektovane narudžbine.", "Greška", JOptionPane.ERROR_MESSAGE);
+        }
+    }
+
+
+    private void setSupplierComboBoxById(int supplierId) {
+        for (int i = 0; i < supplier.getItemCount(); i++) {
+            String item = (String) supplier.getItemAt(i);
+            String idPart = item.split(" - ")[0].trim();
+
+            try {
+                int id = Integer.parseInt(idPart);
+                if (id == supplierId) {
+                    supplier.setSelectedIndex(i);
+                    break;
+                }
+            } catch (NumberFormatException ex) {
+                ex.printStackTrace();
+            }
+        }
     }
 
     private void initComponents() {
@@ -772,6 +1259,7 @@ public class NewShipment extends JFrame {
         panel1 = new JPanel();
         label1 = new JLabel();
         supplier = new JComboBox();
+        orderedSupplies = new JButton();
         back = new JButton();
         scrollPane1 = new JScrollPane();
         items = new JTable();
@@ -786,6 +1274,22 @@ public class NewShipment extends JFrame {
         add = new JButton();
         finnish = new JButton();
         popupMenu = new JPopupMenu();
+        orderedSuppliesDialog = new JDialog();
+        panel2 = new JPanel();
+        back2 = new JButton();
+        orderCB = new JComboBox();
+        scrollPane2 = new JScrollPane();
+        orderItems = new JTable();
+        add2 = new JButton();
+        orderedSuppliesDialog2 = new JDialog();
+        panel3 = new JPanel();
+        back3 = new JButton();
+        productName = new JTextField();
+        label6 = new JLabel();
+        locationCB2 = new JComboBox();
+        label7 = new JLabel();
+        datePicker1 = new DatePicker();
+        add3 = new JButton();
 
         //======== this ========
         setDefaultCloseOperation(WindowConstants.EXIT_ON_CLOSE);
@@ -830,6 +1334,19 @@ public class NewShipment extends JFrame {
             supplier.setForeground(Color.darkGray);
             panel1.add(supplier, "cell 2 1 2 1");
 
+            //---- orderedSupplies ----
+            orderedSupplies.setSelectedIcon(null);
+            orderedSupplies.setIcon(UIManager.getIcon("OptionPane.warningIcon"));
+            orderedSupplies.setBackground(new Color(0xb3d8a8));
+            orderedSupplies.setForeground(Color.darkGray);
+            orderedSupplies.addMouseListener(new MouseAdapter() {
+                @Override
+                public void mouseClicked(MouseEvent e) {
+                    orderedSuppliesMouseClicked(e);
+                }
+            });
+            panel1.add(orderedSupplies, "cell 6 1");
+
             //---- back ----
             back.setText("Nazad");
             back.setBackground(new Color(0xb3d8a8));
@@ -863,7 +1380,6 @@ public class NewShipment extends JFrame {
             panel1.add(label2, "cell 5 3");
 
             //---- product ----
-            product.setBackground(new Color(0xb3d8a8));
             product.setForeground(Color.darkGray);
             panel1.add(product, "cell 6 3 2 1");
 
@@ -946,6 +1462,191 @@ public class NewShipment extends JFrame {
             popupMenu.setBackground(new Color(0xb3d8a8));
             popupMenu.setForeground(Color.darkGray);
         }
+
+        //======== orderedSuppliesDialog ========
+        {
+            orderedSuppliesDialog.setModal(true);
+            orderedSuppliesDialog.addComponentListener(new ComponentAdapter() {
+                @Override
+                public void componentShown(ComponentEvent e) {
+                    orderedSuppliesDialogComponentShown(e);
+                }
+            });
+            var orderedSuppliesDialogContentPane = orderedSuppliesDialog.getContentPane();
+
+            //======== panel2 ========
+            {
+                panel2.setBackground(new Color(0x3d8d7a));
+                panel2.setLayout(new MigLayout(
+                    "fill,hidemode 3",
+                    // columns
+                    "[fill]" +
+                    "[fill]" +
+                    "[fill]" +
+                    "[fill]" +
+                    "[fill]" +
+                    "[fill]" +
+                    "[fill]" +
+                    "[fill]",
+                    // rows
+                    "[fill]" +
+                    "[fill]" +
+                    "[fill]" +
+                    "[fill]" +
+                    "[fill]" +
+                    "[fill]" +
+                    "[]" +
+                    "[fill]" +
+                    "[fill]"));
+
+                //---- back2 ----
+                back2.setText("Nazad");
+                back2.setBackground(new Color(0xb3d8a8));
+                back2.setForeground(Color.darkGray);
+                panel2.add(back2, "cell 0 0");
+
+                //---- orderCB ----
+                orderCB.setBackground(new Color(0xb3d8a8));
+                orderCB.setForeground(Color.darkGray);
+                orderCB.addItemListener(e -> orderCBItemStateChanged(e));
+                orderCB.addPropertyChangeListener(e -> orderCBPropertyChange(e));
+                orderCB.addActionListener(e -> orderCB(e));
+                panel2.add(orderCB, "cell 1 1 6 1");
+
+                //======== scrollPane2 ========
+                {
+                    scrollPane2.setBackground(Color.darkGray);
+                    scrollPane2.setForeground(Color.darkGray);
+
+                    //---- orderItems ----
+                    orderItems.setBackground(new Color(0xfbffe4));
+                    orderItems.setForeground(Color.darkGray);
+                    orderItems.setGridColor(Color.darkGray);
+                    orderItems.setSelectionBackground(new Color(0xb3d8a8));
+                    orderItems.setSelectionForeground(Color.darkGray);
+                    scrollPane2.setViewportView(orderItems);
+                }
+                panel2.add(scrollPane2, "cell 0 2 7 4,growy");
+
+                //---- add2 ----
+                add2.setText("Dodaj");
+                add2.setBackground(new Color(0xb3d8a8));
+                add2.setForeground(Color.darkGray);
+                add2.addMouseListener(new MouseAdapter() {
+                    @Override
+                    public void mouseClicked(MouseEvent e) {
+                        add2MouseClicked(e);
+                    }
+                });
+                panel2.add(add2, "cell 1 6");
+            }
+
+            GroupLayout orderedSuppliesDialogContentPaneLayout = new GroupLayout(orderedSuppliesDialogContentPane);
+            orderedSuppliesDialogContentPane.setLayout(orderedSuppliesDialogContentPaneLayout);
+            orderedSuppliesDialogContentPaneLayout.setHorizontalGroup(
+                orderedSuppliesDialogContentPaneLayout.createParallelGroup()
+                    .addComponent(panel2, GroupLayout.Alignment.TRAILING, GroupLayout.DEFAULT_SIZE, 453, Short.MAX_VALUE)
+            );
+            orderedSuppliesDialogContentPaneLayout.setVerticalGroup(
+                orderedSuppliesDialogContentPaneLayout.createParallelGroup()
+                    .addGroup(orderedSuppliesDialogContentPaneLayout.createSequentialGroup()
+                        .addComponent(panel2, GroupLayout.PREFERRED_SIZE, 505, GroupLayout.PREFERRED_SIZE)
+                        .addGap(0, 0, Short.MAX_VALUE))
+            );
+            orderedSuppliesDialog.pack();
+            orderedSuppliesDialog.setLocationRelativeTo(orderedSuppliesDialog.getOwner());
+        }
+
+        //======== orderedSuppliesDialog2 ========
+        {
+            orderedSuppliesDialog2.setModal(true);
+            var orderedSuppliesDialog2ContentPane = orderedSuppliesDialog2.getContentPane();
+
+            //======== panel3 ========
+            {
+                panel3.setBackground(new Color(0x3d8d7a));
+                panel3.setLayout(new MigLayout(
+                    "fill,hidemode 3",
+                    // columns
+                    "[fill]" +
+                    "[fill]" +
+                    "[fill]" +
+                    "[fill]" +
+                    "[fill]" +
+                    "[fill]" +
+                    "[fill]" +
+                    "[fill]",
+                    // rows
+                    "[fill]" +
+                    "[fill]" +
+                    "[fill]" +
+                    "[fill]" +
+                    "[fill]" +
+                    "[fill]" +
+                    "[fill]" +
+                    "[fill]" +
+                    "[fill]" +
+                    "[fill]"));
+
+                //---- back3 ----
+                back3.setText("Nazad");
+                back3.setBackground(new Color(0xb3d8a8));
+                back3.setForeground(Color.darkGray);
+                panel3.add(back3, "cell 1 1,align center center,grow 0 0");
+
+                //---- productName ----
+                productName.setBackground(new Color(0xb3d8a8));
+                productName.setForeground(Color.darkGray);
+                productName.setEditable(false);
+                panel3.add(productName, "cell 1 2 4 1,aligny center,growy 0");
+
+                //---- label6 ----
+                label6.setText("Lokacija:");
+                label6.setForeground(new Color(0xfbffe4));
+                panel3.add(label6, "cell 1 3 2 1");
+
+                //---- locationCB2 ----
+                locationCB2.setBackground(new Color(0xb3d8a8));
+                locationCB2.setForeground(Color.darkGray);
+                locationCB2.addItemListener(e -> orderCBItemStateChanged(e));
+                panel3.add(locationCB2, "cell 1 4 6 1,aligny center,growy 0");
+
+                //---- label7 ----
+                label7.setText("Rok trajanja:");
+                label7.setForeground(new Color(0xfbffe4));
+                panel3.add(label7, "cell 1 5 2 1");
+
+                //---- datePicker1 ----
+                datePicker1.setBackground(new Color(0xb3d8a8));
+                datePicker1.setForeground(Color.darkGray);
+                panel3.add(datePicker1, "cell 1 6 6 1,aligny center,growy 0");
+
+                //---- add3 ----
+                add3.setText("Dodaj");
+                add3.setBackground(new Color(0xb3d8a8));
+                add3.setForeground(Color.darkGray);
+                add3.addMouseListener(new MouseAdapter() {
+                    @Override
+                    public void mouseClicked(MouseEvent e) {
+                        add3MouseClicked(e);
+                    }
+                });
+                panel3.add(add3, "cell 1 8,align center center,grow 0 0");
+            }
+
+            GroupLayout orderedSuppliesDialog2ContentPaneLayout = new GroupLayout(orderedSuppliesDialog2ContentPane);
+            orderedSuppliesDialog2ContentPane.setLayout(orderedSuppliesDialog2ContentPaneLayout);
+            orderedSuppliesDialog2ContentPaneLayout.setHorizontalGroup(
+                orderedSuppliesDialog2ContentPaneLayout.createParallelGroup()
+                    .addComponent(panel3, GroupLayout.DEFAULT_SIZE, 453, Short.MAX_VALUE)
+            );
+            orderedSuppliesDialog2ContentPaneLayout.setVerticalGroup(
+                orderedSuppliesDialog2ContentPaneLayout.createParallelGroup()
+                    .addComponent(panel3, GroupLayout.DEFAULT_SIZE, 504, Short.MAX_VALUE)
+            );
+            orderedSuppliesDialog2.pack();
+            orderedSuppliesDialog2.setLocationRelativeTo(orderedSuppliesDialog2.getOwner());
+        }
         // JFormDesigner - End of component initialization  //GEN-END:initComponents  @formatter:on
     }
 
@@ -954,6 +1655,7 @@ public class NewShipment extends JFrame {
     private JPanel panel1;
     private JLabel label1;
     private JComboBox supplier;
+    private JButton orderedSupplies;
     private JButton back;
     private JScrollPane scrollPane1;
     private JTable items;
@@ -968,6 +1670,22 @@ public class NewShipment extends JFrame {
     private JButton add;
     private JButton finnish;
     private JPopupMenu popupMenu;
+    private JDialog orderedSuppliesDialog;
+    private JPanel panel2;
+    private JButton back2;
+    private JComboBox orderCB;
+    private JScrollPane scrollPane2;
+    private JTable orderItems;
+    private JButton add2;
+    private JDialog orderedSuppliesDialog2;
+    private JPanel panel3;
+    private JButton back3;
+    private JTextField productName;
+    private JLabel label6;
+    private JComboBox locationCB2;
+    private JLabel label7;
+    private DatePicker datePicker1;
+    private JButton add3;
     // JFormDesigner - End of variables declaration  //GEN-END:variables  @formatter:on
     @Autowired
     private ProductBatchRepository productBatchRepository;
@@ -975,12 +1693,44 @@ public class NewShipment extends JFrame {
     private ProductBatchService productBatchService;
     private List<Map<String, Object>> itemsList = new ArrayList<>();
     private final ObjectMapper objectMapper;
+    private int selectedOrderId;
+    private List<OrderItemsDto> itemsToProcess = new ArrayList<>();
+    private int currentItemIndex = 0;
+    private int selectedSupplierId;
+    private List<Integer> processedOrderIds = new ArrayList<>();
+
+
 
     public List<Map<String, Object>> getItemsList() {
         return itemsList;
     }
 
     public void setItemsList(List<Map<String, Object>> itemsList) {
+        
         this.itemsList = itemsList;
+    }
+
+    public int getSelectedOrderId() {
+        return selectedOrderId;
+    }
+
+    public void setSelectedOrderId(int selectedOrderId) {
+        this.selectedOrderId = selectedOrderId;
+    }
+
+    public int getSelectedSupplierId() {
+        return selectedSupplierId;
+    }
+
+    public void setSelectedSupplierId(int selectedSupplierId) {
+        this.selectedSupplierId = selectedSupplierId;
+    }
+
+    public List<Integer> getProcessedOrderIds() {
+        return processedOrderIds;
+    }
+
+    public void setProcessedOrderIds(List<Integer> processedOrderIds) {
+        this.processedOrderIds = processedOrderIds;
     }
 }
